fix: change text-align

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
   font-size: 20px;
-  background-color: rgb(255, 255, 255);
-  background-position: center top;
   max-width: 1024px;
+}
+
+h1, h2, .english{
+  text-align: center;
+}
+
+.imgcenter{
+  text-align: center;
 }
